--- a/page-2.html
+++ b/page-2.html
@@ -9,7 +9,7 @@
     <title>caleste</title>
 </head>
 <body>
-<div id="wrapper">
+<div id="wrapper" class="page2">
     <div id="top_menu_search">
         <div class="top_mail">
             <a href="#">
@@ -22,45 +22,24 @@
             </a>
         </div>
         <div class="menu_search">
-                <form action="get">
-                    <input type="text"/>
-                </form>
-                <ul class="menu">
-                    <li><a href="#">MAPA DEL SITIO</a></li>
-                    <li><a href="#">CONTÁCTENOS</a></li>
-                    <li><a href="#">EVENTOS</a></li>
-                    <li class="last_ch"><a href="#">INICIO</a></li>
-                </ul>
+            <form action="get">
+                <input type="text"/>
+            </form>
+            <ul class="menu">
+                <li><a href="#">MAPA DEL SITIO</a></li>
+                <li><a href="#">CONTÁCTENOS</a></li>
+                <li><a href="#">EVENTOS</a></li>
+                <li class="last_ch"><a href="#">INICIO</a></li>
+            </ul>
         </div>
     </div>
-    <div id="slider">
-        <div id="lt_but">
-            <a href="#">
-                <img src="./img/lt_but.png" alt="left"/>
-            </a>
-        </div>
-        <div id="wrap_slider">
-            <div class="descr">
-               <h2>tim <span>burton</span></h2>
-                <p>Lorem ipsum ne pro nihil saperet scaevola, eu vix sumo exerci, mel aeterno feugiat intellegam cu.</p>
-            </div>
-            <div class="img">
-                <img src="./img/img_slider.jpg" alt="#"/>
-            </div>
-        </div>
-        <div id="rt_but">
-            <a href="#">
-                <img src="./img/rt_but.png" alt="right"/>
-            </a>
-        </div>
-    </div>
-    <div id="wrap_cont">
+    <div id="wrap_cont" class="page2">
         <div id="nav_menu">
             <ul>
                 <li><a href="#">
                     <span>Loren ipsum</span>
                     loren ipsun dolor
-                    </a>
+                </a>
                 </li>
                 <li>
                     <a href="#">
@@ -142,6 +121,106 @@
                     <span>2 COMENTARIOS</span><img src="./img/comment.png" alt=""/>
                 </div>
             </div>
+            <div class="cont_post p4">
+                <p class="post_head">Vix sumo exerci, mel aeterno feugiat intellegam cu</p>
+                <span class="meta">scrito por Admin  | Jul 09, 2009  |  Lroem Ipsum</span>
+                <p class="img"><img src="./img/cont_post4.png" alt=""/></p>
+                <p>
+                    Exerci, mel aeterno feugiat intellegam cu.
+                    Lorem ipsum ne pro nihil saperet scaevola,
+                    eu vix sumo exerci, mel aeterno feugiat intellegam cu.
+                    Lorem ipsum ne pro nihil saperet scaevola, eu vix sumo exerci,
+                    mel aeterno feugiat intellegam cu.    [...]
+                </p>
+                <div class="comments">
+                    <span>2 COMENTARIOS</span><img src="./img/comment.png" alt=""/>
+                </div>
+            </div>
+            <div class="cont_post p5">
+                <p class="post_head">Vix sumo exerci, mel aeterno feugiat intellegam cu</p>
+                <span class="meta">scrito por Admin  | Jul 09, 2009  |  Lroem Ipsum</span>
+                <p class="img"><img src="./img/cont_post5.png" alt=""/></p>
+                <p>
+                    Exerci, mel aeterno feugiat intellegam cu.
+                    Lorem ipsum ne pro nihil saperet scaevola,
+                    eu vix sumo exerci, mel aeterno feugiat intellegam cu.
+                    Lorem ipsum ne pro nihil saperet scaevola, eu vix sumo exerci,
+                    mel aeterno feugiat intellegam cu.    [...]
+                </p>
+                <div class="comments">
+                    <span>2 COMENTARIOS</span><img src="./img/comment.png" alt=""/>
+                </div>
+            </div>
+            <div class="cont_post p6">
+                <p class="post_head">Vix sumo exerci, mel aeterno feugiat intellegam cu</p>
+                <span class="meta">scrito por Admin  | Jul 09, 2009  |  Lroem Ipsum</span>
+                <p class="img"><img src="./img/cont_post6.png" alt=""/></p>
+                <p>
+                    Exerci, mel aeterno feugiat intellegam cu.
+                    Lorem ipsum ne pro nihil saperet scaevola,
+                    eu vix sumo exerci, mel aeterno feugiat intellegam cu.
+                    Lorem ipsum ne pro nihil saperet scaevola, eu vix sumo exerci,
+                    mel aeterno feugiat intellegam cu.    [...]
+                </p>
+                <div class="comments">
+                    <span>2 COMENTARIOS</span><img src="./img/comment.png" alt=""/>
+                </div>
+            </div>
+            <div class="cont_post p7">
+                <p class="post_head">Vix sumo exerci, mel aeterno feugiat intellegam cu</p>
+                <span class="meta">scrito por Admin  | Jul 09, 2009  |  Lroem Ipsum</span>
+                <p class="img"><img src="./img/cont_post7.png" alt=""/></p>
+                <p>
+                    Exerci, mel aeterno feugiat intellegam cu.
+                    Lorem ipsum ne pro nihil saperet scaevola,
+                    eu vix sumo exerci, mel aeterno feugiat intellegam cu.
+                    Lorem ipsum ne pro nihil saperet scaevola, eu vix sumo exerci,
+                    mel aeterno feugiat intellegam cu.    [...]
+                </p>
+                <div class="comments">
+                    <span>2 COMENTARIOS</span><img src="./img/comment.png" alt=""/>
+                </div>
+            </div>
+            <div class="cont_post p8">
+                <p class="post_head">Vix sumo exerci, mel aeterno feugiat intellegam cu</p>
+                <span class="meta">scrito por Admin  | Jul 09, 2009  |  Lroem Ipsum</span>
+                <p class="img"><img src="./img/cont_post8.png" alt=""/></p>
+                <p>
+                    Exerci, mel aeterno feugiat intellegam cu.
+                    Lorem ipsum ne pro nihil saperet scaevola,
+                    eu vix sumo exerci, mel aeterno feugiat intellegam cu.
+                    Lorem ipsum ne pro nihil saperet scaevola, eu vix sumo exerci,
+                    mel aeterno feugiat intellegam cu.    [...]
+                </p>
+                <div class="comments">
+                    <span>2 COMENTARIOS</span><img src="./img/comment.png" alt=""/>
+                </div>
+            </div>
+            <div class="cont_post p9">
+                <p class="post_head">Vix sumo exerci, mel aeterno feugiat intellegam cu</p>
+                <span class="meta">scrito por Admin  | Jul 09, 2009  |  Lroem Ipsum</span>
+                <p class="img"><img src="./img/cont_post9.png" alt=""/></p>
+                <p>
+                    Exerci, mel aeterno feugiat intellegam cu.
+                    Lorem ipsum ne pro nihil saperet scaevola,
+                    eu vix sumo exerci, mel aeterno feugiat intellegam cu.
+                    Lorem ipsum ne pro nihil saperet scaevola, eu vix sumo exerci,
+                    mel aeterno feugiat intellegam cu.    [...]
+                </p>
+                <div class="comments">
+                    <span>2 COMENTARIOS</span><img src="./img/comment.png" alt=""/>
+                </div>
+            </div>
+            <div id="pages_num">
+                <ul>
+                    <li class="first_page"><a href="#">всего стр 19</a></li>
+                    <li class="num_page active"><a href="#">1</a></li>
+                    <li class="num_page"><a href="#">2</a></li>
+                    <li class="num_page"><a href="#">3</a></li>
+                    <li class="num_page"><a href="#">4</a></li>
+                    <li class="last_page"><a href="#">на последн</a></li>
+                </ul>
+            </div>
         </div>
         <div id="right_column">
             <div class="search">
@@ -154,6 +233,15 @@
                     </form>
                 </div>
             </div>
+            <div id="sponsors">
+                <h3>Patrocionadores</h3>
+                <img src="./img/sponsor_foto.jpg" alt=""/>
+                <img src="./img/sponsor_foto.jpg" alt=""/>
+                <img src="./img/sponsor_foto.jpg" alt=""/>
+                <img src="./img/sponsor_foto.jpg" alt=""/>
+                <img src="./img/sponsor_foto.jpg" alt=""/>
+                <img src="./img/sponsor_foto.jpg" alt=""/>
+            </div>
             <div class="col_post">
                 <div>
                     <img src="./img/right_col_post1.jpg" alt=""/>
@@ -161,24 +249,36 @@
                     <p class="col_txt">
                         Lorem ipsum ne pro nihil saperet scaevola, eu vix sumo exerci, mel aeterno feugiat intellegam cu.
                     </p>
+                    <hr>
                 </div>
                 <div><img src="./img/right_col_post2.jpg" alt=""/>
                     <h4>Pro nihil saperet scaevola</h4>
                     <p>
                         Lorem ipsum ne pro nihil saperet scaevola, eu vix sumo exerci, mel aeterno feugiat intellegam cu.
                     </p>
+                    <hr>
                 </div>
-                <div><img src="./img/right_col_post3.jpg" alt=""/>
-                    <h4>Lorem ipsum ne pro nihil </h4>
-                    <p>
-                        Lorem ipsum ne pro nihil saperet scaevola, eu vix sumo exerci, mel aeterno feugiat intellegam cu.
-                    </p>
-                </div>
+            </div>
+            <div id="cloud_tags">
+                <h3>Nube de Etiquetas</h3>
+                <p>
+                    <span class="sp1">Lorem</span> ipsum mea ea <span class="sp2">error</span> <span class="sp1">praesent</span> vituperata <span class="sp2">Pri</span> mollis <span class="sp1">qualisque</span> no veritus <span class="sp2">persequeris</span> vituperatoribus at pro volumus <span class="sp2">instructior</span> mel Dico admodum duo <span class="sp1">prompta</span>constituto <span class="sp2">constituam</span> mea per dicunt convenire cu</p>
+            </div>
+            <div id="galer" class="page2">
+                <h3>Galería Flickr</h3>
+                <div class="gal_img"><img src="./img/gal1.jpg" alt=""/></div>
+                <div class="gal_img"><img src="./img/gal2.jpg" alt=""/></div>
+                <div class="gal_img"><img src="./img/gal3.jpg" alt=""/></div>
+                <div class="gal_img"><img src="./img/gal4.jpg" alt=""/></div>
+                <div class="gal_img"><img src="./img/gal5.jpg" alt=""/></div>
+                <div class="gal_img"><img src="./img/gal6.jpg" alt=""/></div>
+                <div class="gal_img"><img src="./img/gal7.jpg" alt=""/></div>
+                <div class="gal_img"><img src="./img/gal8.jpg" alt=""/></div>
             </div>
         </div>
     </div>
 
-    </div>
+</div>
 <div id="footer">
     <div class="foot_cont">
         <div class="foot_col first">
@@ -238,35 +338,10 @@
             </form>
         </div>
 
-        <div id="sub_foot">
-            <p class="post_head">Lorem ipsum dolor resquet aout feugiat sumo</p>
-            <span class="meta">Escrito por Admin  | Jul 09, 2009  |  Lroem Ipsum</span>
-            <p>
-                Lorem ipsum ne pro nihil saperet scaevola,
-                eu vix sumo exerci, mel aeterno feugiat intellegam cu.
-                Lorem ipsum ne pro nihil saperet scaevola, eu vix sumo exerci,
-                mel aeterno feugiat intellegam cu.   Lorem ipsum ne pro nihil saperet scaevola.  [...]
-            </p>
-            <div class="comments">
-                <span>2 COMENTARIOS</span><img src="./img/comment.png" alt=""/>
-            </div>
+        <div id="copyright">
+            <p>©2010 Amuki. Todos los Derechos Reservados.</p>
         </div>
-        <div id="galer">
-            <h3>Galería Flickr</h3>
-            <div class="gal_img"><img src="./img/gal1.jpg" alt=""/></div>
-            <div class="gal_img"><img src="./img/gal2.jpg" alt=""/></div>
-            <div class="gal_img"><img src="./img/gal3.jpg" alt=""/></div>
-            <div class="gal_img"><img src="./img/gal4.jpg" alt=""/></div>
-            <div class="gal_img"><img src="./img/gal5.jpg" alt=""/></div>
-            <div class="gal_img"><img src="./img/gal6.jpg" alt=""/></div>
-            <div class="gal_img"><img src="./img/gal7.jpg" alt=""/></div>
-            <div class="gal_img"><img src="./img/gal8.jpg" alt=""/></div>
-            <h3 class="sub_h">Lorem ipsum dolor</h3>
-            <p class="sub_txt">
-                Lorem ipsum ne pro nihil saperet scaevola,
-                eu vix sumo exerci, mel aeterno feugiat intellegam cu.
-            </p>
-        </div>
+
     </div>
 </div>
 
