--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/html">
+<html>
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./css/style.css"/>
@@ -22,7 +22,7 @@
             </a>
         </div>
         <div class="menu_search">
-                <form action="get">
+                <form action="#">
                     <input type="text"/>
                 </form>
                 <ul class="menu">
@@ -148,7 +148,7 @@
                 <p>Ingrese su correo electrónico para
                     recibir nuestro newsletter</p>
                 <div id="wrap_search">
-                    <form action="">
+                    <form action="#">
                         <input class="txt" type="text"/>
                         <input class="but_subm" value=""  type="submit"/>
                     </form>
@@ -221,7 +221,7 @@
         </div>
         <div class="foot_col form">
             <h3>Contáctenos</h3>
-            <form action="">
+            <form action="#">
                 <div class="foot_form_name">
                     <span>Nombre:</span>
                     <input type="text"/>
