--- a/single_post.html
+++ b/single_post.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/html">
+<html>
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./css/style.css"/>
@@ -174,7 +174,7 @@
     <div class="comment_form">
         <h3>Deja un comentario</h3>
 
-        <form action="">
+        <form action="#">
             <div class="txt_area">
                 <span>message:</span>
                 <textarea name="txt_comment"></textarea>
@@ -194,7 +194,7 @@
         <p>Ingrese su correo electrónico para
             recibir nuestro newsletter</p>
         <div id="wrap_search">
-            <form action="">
+            <form action="#">
                 <input class="txt" type="text"/>
                 <input class="but_subm" value=""  type="submit"/>
             </form>
@@ -294,7 +294,7 @@
         </div>
         <div class="foot_col form">
             <h3>Contáctenos</h3>
-            <form action="">
+            <form action="#">
                 <div class="foot_form_name">
                     <span>Nombre:</span>
                     <input type="text"/>
